change root directory

--- a/src/components/RecommendationPage.scss
+++ b/src/components/RecommendationPage.scss
@@ -1,3 +1,6 @@
+.rec-page-container {
+  margin-top: 20px;
+}
 .feed {
   height: 100%;
   border-left: 1px solid #6c757d41;
@@ -11,4 +14,8 @@
 .news-title {
   width: 304px;
   position: fixed;
+}
+
+.from-users img {
+  width: 20px;
 }
