--- a/src/components/PostSingle.scss
+++ b/src/components/PostSingle.scss
@@ -9,6 +9,11 @@
   right: 5px;
 }
 
+.user-login {
+  color: #6c757d;
+  font-size: 1rem;
+  font-weight: 450;
+}
 // .icon {
 //   position: absolute;
 // }
